# speem

./: CNAME  README.md  index.html
Note/: README.md
Pass/android_app/app/: build.gradle.kts
Pass/android_app/gradle/wrapper/: gradle-wrapper.properties
Pass/ios_app/SPEEM/SPEEM/: ContentView.swift
Pass/rust_lib/: Cargo.toml
Pass/rust_lib/src/: config.rs
Pass/rust_lib/tests/: integration_test.rs
Vault/: README.md
app/: README.md
app/ios_app/SPEEM/SPEEM/: SPEEMApp.swift
app/rust_lib/src/: lib.rs  storage.rs
blockchain/: Cargo.toml  README.md
blockchain/node/: Cargo.toml
blockchain/node/src/: benchmarking.rs  chain_spec.rs  command.rs  rpc.rs  service.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: lib.rs
docs/: PROJECT_OUTLINE.md
ios_app/SPEEM/SPEEM.xcodeproj/: project.pbxproj
ios_app/SPEEM/SPEEM.xcodeproj/project.xcworkspace/xcuserdata/wassim.xcuserdatad/: UserInterfaceState.xcuserstate
rust_lib/: Cargo.toml
rust_lib/src/: crypto.rs  errors.rs  storage.rs
