[package]
name = "speem"
version = "0.1.0"
edition = "2021"
authors = ["Wassim Mansouri <wassim@wassimans.com>"]

[dependencies]
criterion = "0.5.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
ring = "0.17.8"
rsa = "0.9.6"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "sqlite"] }
thiserror = "1.0.61"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
