[package]
name = "speem"
version = "0.1.0"
edition = "2021"
authors = ["Wassim Mansouri <wassim@wassimans.com>"]

[dependencies]
criterion = "0.5.1"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rand = "0.8.5"
ring = "0.17.8"
bip39 = "2.0.0"
rsa = "0.9.6"
rusqlite = { version = "0.31.0", features = ["sqlcipher", "bundled"] }
uuid = { version = "1.9.1", features = ["v4"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
thiserror = "1.0.61"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
